--- a/Website/blog-2-week.html
+++ b/Website/blog-2-week.html
@@ -101,7 +101,7 @@
                         <img src="png/Titelbild_01.jpg" alt="Titlepicture, Temple" class="img-fluid rounded shadow my-3">
                         <p class="lead">
                             South Korea had been on my travel list for a long time.
-                            I’ve always been fascinated by its mix of old and new — ancient palaces next to neon-lit gaming
+                            I’ve always been fascinated by its mix of old and new ancient palaces next to neon-lit gaming
                             cafés,
                             the smell of street food drifting through modern city streets, and the rhythm of a culture that
                             feels both futuristic and deeply traditional.
@@ -109,7 +109,7 @@
                         <p>
                             This spring, I finally spent <strong>two unforgettable</strong> weeks traveling through the
                             country with a friend
-                            —
+                            
                             from Seoul’s bustling neighbourhoods to Gyeongju’s historic treasures, Busan’s coastal charm,
                             and Jeonju’s traditional beauty.
                         </p>
@@ -173,15 +173,15 @@
                             <strong>1,277,698 won</strong>.
                             I paid around <strong>1,053 CHF</strong> for direct flights with Korean Air, and <strong>600
                                 CHF</strong> for all the hotels. <br>
-                            So my total expenses for these two weeks were around <strong>2,500 CHF</strong> — and that was
+                            So my total expenses for these two weeks were around <strong>2,500 CHF</strong> and that was
                             with a very comfortable lifestyle.
                         </p>
 
 
                         <h4 class="mt-5">When to visit:</h4>
                         <p>
-                            We went in April, and I would highly recommend it because of the mild temperatures — usually
-                            around <strong>15–25°C</strong> — and the overall pleasant weather.
+                            We went in April, and I would highly recommend it because of the mild temperatures, usually
+                            around <strong>15–25°C</strong> and the overall pleasant weather.
                             I would discourage visiting in the peak summer months because of the heat and humidity.
                             That said, every season in South Korea has its own charm and atmosphere.
                         </p>
@@ -193,7 +193,7 @@
                             It works for almost all buses and metros, and you can get one in most convenience stores.
                             If you need to catch a bullet train (KTX) from Seoul to Busan, the best option is to go to the
                             station one day before your trip and buy the ticket at the counter. <br>
-                            For navigation, use <strong> Google Maps and Kakao Maps</strong> — I recommend using both
+                            For navigation, use <strong> Google Maps and Kakao Maps</strong>, I recommend using both
                             because they sometimes show different routes.
                             Public transport can take you almost everywhere, and taxis are also available, although they are
                             not always the cheapest option. <br>
@@ -220,7 +220,7 @@
                             which is busy and full of life day and night. <br>
                             That afternoon and evening, we explored <strong>Myeongdong’s</strong> alleys, tried
                             <strong>Korean BBQ</strong>, and ended the night in a small local bar.
-                            The energy of the city hit us instantly — loud, colourful, and alive.
+                            The energy of the city hit us instantly loud, colourful, and alive.
                         </p>
                         <div class="alert alert-light border-start border-4 border-dark">
                             <strong>Things to do:</strong> <br>
@@ -257,7 +257,7 @@
                             We started the morning exploring <strong>Bukchon Hanok Village</strong>, a neighbourhood full of
                             traditional Korean houses between <strong><span class="wiki-term" data-term="Gyeongbokgung Palace">Gyeongbokgung</span></strong> and
                             <strong><span class="wiki-term" data-term="Changdeokgung Palace">Changdeokgung</span></strong> Palaces.
-                            Walking there felt like time-travel — from modern streets to old alleys and tiled roofs.<br>
+                            Walking there felt like time-travel from modern streets to old alleys and tiled roofs.<br>
                             Even though it’s a cool place to visit, I was slightly disappointed. It felt more like a regular
                             neighbourhood than the fully “traditional” atmosphere I had expected, but it was still worth
                             seeing.
@@ -265,7 +265,7 @@
                         <p>
                             Later, we visited <strong><span class="wiki-term" data-term="Gyeongbokgung Palace">Gyeongbokgung</span></strong> and <strong><span class="wiki-term" data-term="Changdeokgung Palace">Changdeokgung Palaces</span></strong>,
                             learning about Korea’s royal history and architecture.
-                            You can stroll around quite freely and there’s a lot of information to take in — from the
+                            You can stroll around quite freely and there’s a lot of information to take in from the
                             Japanese occupation to the development of the palace complexes.
                             There, you can also witness a traditional reenactment of the Joseon Dynasty’s royal
                             guard-changing ceremony. Entry tickets cost 3’000 Won each.
@@ -276,7 +276,7 @@
                             We had a light lunch, played a few matches, and enjoyed the vibrant atmosphere of the esports
                             community.<br>
                             Later, we explored the <strong>Insadong</strong> area near our hotel and discovered a hidden gem
-                            of a restaurant — <strong>Insadong Maneul Bossam</strong>.
+                            of a restaurant <strong>Insadong Maneul Bossam</strong>.
                             They served traditional set meals with Bossam (boiled pork belly) and spring onion pancakes,
                             which were absolutely delicious.
                             Paired with a savoury chestnut makgeolli, it was the perfect way to end the evening.
@@ -294,7 +294,6 @@
                             <a href="https://maps.app.goo.gl/KGZHH59qE1Wk343e7">Insadong Maneul Bossam</a>
                         </div>
                         <div class="row g-3 mb-4">
-
                             <div class="col-md-4">
                                 <img src="png/Day2_01.jpg" alt="Lake View"
                                     class="img-fluid rounded shadow h-100 w-100 object-fit-cover hover-zoom">
@@ -309,7 +308,6 @@
                                 <img src="png/Day2_02.jpg" alt="Seoul Sunset"
                                     class="img-fluid rounded shadow h-100 w-100 object-fit-cover hover-zoom">
                             </div>
-
                         </div>
 
 
@@ -317,7 +315,7 @@
                         <p>
                             Our third day was something completely different: the <strong><span class="wiki-term" data-term="DMZ">DMZ</span> Tour</strong> near the North
                             Korean border.
-                            It was an emotional and educational experience — learning about the history and tension between
+                            It was an emotional and educational experience learning about the history and tension between
                             the two Koreas left a deep impression.
                             We took a guided tour from <strong>GetYourGuide</strong>, which I highly recommend.
                         </p>
@@ -413,8 +411,8 @@
                         <p>
                             The contrast throughout the day was striking: we began at <strong><span class="wiki-term" data-term="Bongeunsa Temple">Bongeunsa Temple</span></strong>, a
                             serene space surrounded by skyscrapers, lush nature, and an impressive standing Buddha statue.
-                            We then visited the <strong>Starfield Library inside the COEX Mall</strong> — a dreamlike place
-                            for book lovers — and made a quick stop at the <strong>Gangnam Style statue</strong>, an iconic
+                            We then visited the <strong>Starfield Library inside the COEX Mall</strong>, a dreamlike place
+                            for book lovers and made a quick stop at the <strong>Gangnam Style statue</strong>, an iconic
                             photo spot just
                             outside the mall.
                         </p>
@@ -487,16 +485,16 @@
                         </p>
                         <p>
                             Later, we saw <strong><span class="wiki-term" data-term="Woljeonggyo Bridge">Woljeonggyo Bridge</span></strong>, which was another highlight of the day.
-                            We also visited this in the evening, and I can only recommend it — the bridge glows beautifully
+                            We also visited this in the evening, and I can only recommend it the bridge glows beautifully
                             in the shimmering lights, creating a perfect photo spot.
                             You can even cross the river on stepping stones and admire the view from below.
                         </p>
                         <p>
                             From there, we visited <strong><span class="wiki-term" data-term="Wolji Pond">Wolji Pond</span></strong>, known for its beautiful pavilions, pagodas,
                             and surrounding nature.
-                            I especially recommend visiting in the evening — the entire area is illuminated in a mysterious,
+                            I especially recommend visiting in the evening the entire area is illuminated in a mysterious,
                             atmospheric light accompanied by soft music.<br>
-                            It was one of my favourite days — a perfect blend of nature, history, and culture.
+                            It was one of my favourite days, a perfect blend of nature, history, and culture.
                         </p>
 
                         <div class="alert alert-light border-start border-4 border-dark">
@@ -541,7 +539,7 @@
                         <p>
                             To reach <strong><span class="wiki-term" data-term="Seokguram Grotto">Seokguram Grotto</span></strong>, you can either take the shuttle bus up the mountain
                             or walk the entire way.
-                            I highly recommend taking the bus up and then walking back down afterward — the trail is
+                            I highly recommend taking the bus up and then walking back down afterward the trail is
                             peaceful and offers beautiful views.
                         </p>
                         <p>
@@ -553,7 +551,7 @@
                         <p>
                             In the evening, we took the bus back to central Gyeongju. We wandered through the
                             <strong><span class="wiki-term" data-term="Gyochon Traditional Village">Gyochon Traditional Village</span></strong>, filled with restaurants, tea houses, and small
-                            shops —
+                            shops,
                             a great place to rest, eat, and explore traditional Korean culture. Then we had dinner at
                             <strong>Tiger Katsu</strong>, a restaurant known for serving delicious Japanese-style pork
                             katsu.
@@ -670,7 +668,7 @@
                             break in the middle of all the exploring.
                         </p>
                         <p>
-                            Part of Gamcheon’s charm comes from its history — the village was shaped by families who settled
+                            Part of Gamcheon’s charm comes from its history the village was shaped by families who settled
                             there during difficult times, including refugees from the North, which gives the area a special
                             cultural background.
                         </p>
@@ -735,7 +733,7 @@
                         </p>
                         <p>
                             For dinner, we chose a small, very traditional family-run restaurant. It was just a father,
-                            mother, and their daughter running the place — and they served some truly delicious home-style
+                            mother, and their daughter running the place and they served some truly delicious home-style
                             cold noodles.
                         </p>
 
@@ -811,7 +809,7 @@
                             Before eating, we stopped by <strong>VIBRA</strong>, a vintage shop where we found some great
                             pieces.
                             For dinner, we went to <strong>Ondam</strong>, a restaurant known for its premium Korean pork
-                            BBQ — and it was absolutely fantastic.
+                            BBQ, and it was absolutely fantastic.
                         </p>
 
                         <div class="alert alert-light border-start border-4 border-dark">
@@ -864,7 +862,7 @@
                             browsing the shops and soaking up the energetic atmosphere.
                         </p>
                         <p>
-                            In the evening, we joined a pub crawl and met new friends — Lydia from Taiwan and Bruno from the
+                            In the evening, we joined a pub crawl and met new friends, Lydia from Taiwan and Bruno from the
                             Netherlands.
                             We visited four different clubs and bars together and ended up dancing until 3 a.m.
                         </p>
@@ -914,7 +912,7 @@
                         <h3 class="mt-5">Day 13: Calm Corners of Seoul</h3>
                         <p>
                             After a late morning, I visited the <strong><span class="wiki-term" data-term="Cheongun Literature Library">Cheongun Literature Library</span></strong> and the
-                            <strong><span class="wiki-term" data-term="Hill of Poet Yun Dong-ju">Hill of Poet Yun Dong-ju</span></strong> — quiet, reflective places that reveal a calmer and
+                            <strong><span class="wiki-term" data-term="Hill of Poet Yun Dong-ju">Hill of Poet Yun Dong-ju</span></strong>, very quiet, reflective places that reveal a calmer and
                             more contemplative side of the city.
                             Near these two sights, there is an art museum that blends traditional and modern styles.
                             <strong>Seokpajeong</strong> features impressive works of art as well as a beautiful garden and
@@ -928,8 +926,8 @@
                         </p>
                         <p>
                             I finished the day gaming with Bruno at the <strong>T1 Base Camp</strong>.
-                            Bruno had an account that allowed us to play on the Korean server — something usually not
-                            possible due to South Korean gaming regulations — which made the experience even more fun and
+                            Bruno had an account that allowed us to play on the Korean server, something usually not
+                            possible due to South Korean gaming regulations, which made the experience even more fun and
                             unique.
                         </p>
                         <p>
@@ -975,7 +973,7 @@
 
                         <h3 class="mt-5">Day 14: Farewell</h3>
                         <p>
-                            We almost missed our flight to Zurich because we overslept — classic.
+                            We almost missed our flight to Zurich because we overslept, classic.
                             With some quick thinking and a taxi driver who must have been secretly training for Formula 1,
                             we made it to <strong>Incheon Airport</strong> just in time.
                             We were so late that we couldn’t even check in our luggage, so we had to drag everything through
@@ -989,7 +987,7 @@
                             Watching Seoul shrink beneath the clouds, it hit me how much these two weeks meant.
                         </p>
                         <p>
-                            South Korea isn’t just a place you visit — it’s a place that stays with you.
+                            South Korea isn’t just a place you visit, it’s a place that stays with you.
                         </p>
                         <div class="row mb-5">
                             <div class="col-12">
