--- a/Website/travel-guide.html
+++ b/Website/travel-guide.html
@@ -126,6 +126,28 @@
                         <li>Kakao Maps</li>
                         <li>Google Maps</li>
                     </ul>
+                    <div class="row g-3 mb-4">
+                        <div class="col-md-4">
+                            <a href="https://www.naver.com/" target="_blank">
+                                <img src="pngtg/Naver.png" alt="Lake View"
+                                    class="img-fluid rounded shadow h-100 w-100 object-fit-cover hover-zoom">
+                            </a>
+                        </div>
+
+                        <div class="col-md-4">
+                            <a href="https://map.kakao.com/?q" target="_blank">
+                                <img src="pngtg/Kakao.png" alt="Bossam"
+                                    class="img-fluid rounded shadow h-100 w-100 object-fit-cover hover-zoom">
+                            </a>
+                        </div>
+
+                        <div class="col-md-4">
+                            <a href="https://www.google.com/maps" target="_blank">
+                                <img src="pngtg/google.jpg" alt="Seoul Sunset"
+                                    class="img-fluid rounded shadow h-100 w-100 object-fit-cover hover-zoom">
+                            </a>
+                        </div>
+                    </div>
                     <p>Download all three before arrival, and use whatever app suits the task the best.</p>
                 </section>
 
@@ -156,20 +178,32 @@
 
                     <div class="card bg-light border-0 mt-4">
                         <div class="card-body">
-                            <h5 class="fw-bold">T-Money Card</h5>
-                            <p>The <strong>T-Money card</strong> is essential for getting around. You can use it for:
-                            </p>
-                            <ul>
-                                <li>Subways</li>
-                                <li>Buses</li>
-                                <li>Some taxis</li>
-                                <li>Convenience stores</li>
-                                <li>Lockers and vending machines</li>
-                            </ul>
-                            <p><strong>Where to buy it:</strong> Airports, Convenience stores (GS25, CU, 7-Eleven),
-                                Subway stations.</p>
-                            <p class="mb-0 text-danger fw-bold">Important: T-Money cards are usually cash-only when
-                                purchasing, so have some Korean won ready on arrival.</p>
+                            <div class="row align-items-center">
+                                <div class="col-md-8">
+                                    <h5 class="fw-bold">T-Money Card</h5>
+                                    <p>The <strong>T-Money card</strong> is essential for getting around. You can use it
+                                        for:</p>
+                                    <ul>
+                                        <li>Subways</li>
+                                        <li>Buses</li>
+                                        <li>Some taxis</li>
+                                        <li>Convenience stores</li>
+                                        <li>Lockers and vending machines</li>
+                                    </ul>
+                                    <p>
+                                        <strong>Where to buy it:</strong> Airports, Convenience stores (GS25, CU,
+                                        7-Eleven),
+                                        Subway stations.
+                                    </p>
+                                    <p class="mb-0 text-danger fw-bold">
+                                        Important: T-Money cards are usually cash-only when purchasing,
+                                        so have some Korean won ready on arrival.
+                                    </p>
+                                </div>
+                                <div class="col-md-4 text-center">
+                                    <img src="pngtg/T-Money.jpg" alt="T-Money Card" class="img-fluid rounded shadow">
+                                </div>
+                            </div>
                         </div>
                     </div>
                 </section>
@@ -437,7 +471,7 @@
                                         family gatherings, wearing hanbok, traditional games, and eating tteokguk (rice
                                         cake soup).</p>
                                     <a href="https://www.90daykorean.com/korean-lunar-new-year/" target="_blank"
-                                        class="btn btn-dark btn-sm btn-link-custom">More Info</a>
+                                        class="btn btn-dark btn-sm btn-link-custom">read more</a>
                                 </div>
                             </div>
                         </div>
@@ -450,7 +484,7 @@
                                         of colorful lanterns. The grand lantern parade through central Seoul is the
                                         highlight.</p>
                                     <a href="https://english.visitkorea.or.kr/svc/contents/contentsView.do?vcontsId=222228"
-                                        target="_blank" class="btn btn-dark btn-sm btn-link-custom">More Info</a>
+                                        target="_blank" class="btn btn-dark btn-sm btn-link-custom">read more</a>
                                 </div>
                             </div>
                         </div>
@@ -463,7 +497,7 @@
                                         transforming the town of Jinhae into a sea of pink blossoms with parades,
                                         concerts, and street food.</p>
                                     <a href="https://english.visitkorea.or.kr/svc/whereToGo/locIntrdn/rgnContentsView.do?vcontsId=124524"
-                                        target="_blank" class="btn btn-dark btn-sm btn-link-custom">More Info</a>
+                                        target="_blank" class="btn btn-dark btn-sm btn-link-custom">read more</a>
                                 </div>
                             </div>
                         </div>
@@ -475,7 +509,7 @@
                                     <p class="card-text">A winter wonderland at Hwacheon, famous for ice fishing for
                                         trout, ice sledding, snow sculptures and outdoor fun in sub-zero conditions.</p>
                                     <a href="https://english.visitkorea.or.kr/svc/contents/contentsView.do?vcontsId=96732"
-                                        target="_blank" class="btn btn-dark btn-sm btn-link-custom">More Info</a>
+                                        target="_blank" class="btn btn-dark btn-sm btn-link-custom">read more</a>
                                 </div>
                             </div>
                         </div>
@@ -488,7 +522,7 @@
                                         agricultural renewal and warding off bad luck. Huge bonfires light the fields
                                         and skies.</p>
                                     <a href="https://english.visitkorea.or.kr/svc/contents/contentsView.do?vcontsId=96364"
-                                        target="_blank" class="btn btn-dark btn-sm btn-link-custom">More Info</a>
+                                        target="_blank" class="btn btn-dark btn-sm btn-link-custom">read more</a>
                                 </div>
                             </div>
                         </div>
@@ -504,7 +538,7 @@
                                     <p class="card-text">One of Korea’s most famous fun festivals at Daecheon Beach
                                         where people enjoy mud pits, slides, body paint, music and beach parties.</p>
                                     <a href="https://www.mudfestival.or.kr/en/festival/main.html" target="_blank"
-                                        class="btn btn-dark btn-sm btn-link-custom">More Info</a>
+                                        class="btn btn-dark btn-sm btn-link-custom">read more</a>
                                 </div>
                             </div>
                         </div>
@@ -516,7 +550,7 @@
                                     <p class="card-text">A lantern festival where tens of thousands of lanterns float
                                         down the Namgang River at night.</p>
                                     <a href="https://english.visitkorea.or.kr/svc/contents/contentsView.do?vcontsId=96362"
-                                        target="_blank" class="btn btn-dark btn-sm btn-link-custom">More Info</a>
+                                        target="_blank" class="btn btn-dark btn-sm btn-link-custom">read more</a>
                                 </div>
                             </div>
                         </div>
@@ -529,7 +563,7 @@
                                         famous Hahoe folk performance, with cultural shows, street parades, and global
                                         dance groups.</p>
                                     <a href="https://english.visitkorea.or.kr/svc/contents/contentsView.do?vcontsId=96388"
-                                        target="_blank" class="btn btn-dark btn-sm btn-link-custom">More Info</a>
+                                        target="_blank" class="btn btn-dark btn-sm btn-link-custom">read more</a>
                                 </div>
                             </div>
                         </div>
@@ -542,7 +576,7 @@
                                         bibimbap dish, with cooking events, tasting sessions, folk games, and markets.
                                     </p>
                                     <a href="https://english.visitkorea.or.kr/svc/whereToGo/locIntrdn/rgnContentsView.do?vcontsId=90014"
-                                        target="_blank" class="btn btn-dark btn-sm btn-link-custom">More Info</a>
+                                        target="_blank" class="btn btn-dark btn-sm btn-link-custom">read more</a>
                                 </div>
                             </div>
                         </div>
@@ -554,7 +588,7 @@
                                     <p class="card-text">Celebrating Korea’s famous fermented food kimchi with making
                                         experiences, tastings, and cultural activities.</p>
                                     <a href="https://english.visitkorea.or.kr/svc/contents/contentsView.do?vcontsId=198450"
-                                        target="_blank" class="btn btn-dark btn-sm btn-link-custom">More Info</a>
+                                        target="_blank" class="btn btn-dark btn-sm btn-link-custom">read more</a>
                                 </div>
                             </div>
                         </div>
@@ -567,7 +601,7 @@
                                         forest tours and bamboo art in Damyang, and premium ceramic exhibitions in
                                         Yeoju.</p>
                                     <a href="https://english.visitkorea.or.kr/svc/contents/contentsView.do?vcontsId=103849"
-                                        target="_blank" class="btn btn-dark btn-sm btn-link-custom">More Info</a>
+                                        target="_blank" class="btn btn-dark btn-sm btn-link-custom">read more</a>
                                 </div>
                             </div>
                         </div>
